Fix button style on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ hr {
 
 button {
     cursor: pointer;
-    height: 50px;
     width: 100%;
     max-width: 600px;
     font-size: 25px;
@@ -38,6 +37,7 @@ button {
     border: 0;
     color: white;
     border-radius: 10px;
+    padding: 10px;
 }
 
 a {
